# tinyOS

./: .gitignore  CMakeLists.txt
include/: thread-sync.h  thread.h
src/: pc.c  pc_cond.c  read_args.cpp
